--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,21 @@ spring.devtools.livereload.enabled=true
 
 # OpenAI secret key
 spring.ai.openai.api-key=${OPENAI_API_KEY}
+
+# JWT
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION_TIME}
+
+# -----------------------------
+# Swagger / OpenAPI configuration
+# -----------------------------
+
+# Path to expose OpenAPI documentation (default is /v3/api-docs if not set)
+springdoc.api-docs.path=/v3/api-docs
+
+# Path to access the Swagger UI (default is /swagger-ui/index.html if not set)
+springdoc.swagger-ui.path=/swagger-ui
+
+# To change the UI URL to /swagger.html, uncomment the lines below:
+# springdoc.swagger-ui.enabled=true
+# springdoc.swagger-ui.url=/swagger-ui.html
