add mongodb docker + dependency

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ JWT_EXPIRATION_TIME=2592000000
 
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key
+
+# MongoDB
+MONGO_URI=mongodb+srv://myuser:myStrongPass123@diemyolo.ylr4qyb.mongodb.net/blogdb?retryWrites=true&w=majority
