--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,6 +33,6 @@ springdoc.api-docs.path=/v3/api-docs
 # Path to access the Swagger UI (default is /swagger-ui/index.html if not set)
 springdoc.swagger-ui.path=/swagger-ui
 
-# To change the UI URL to /swagger.html, uncomment the lines below:
-# springdoc.swagger-ui.enabled=true
-# springdoc.swagger-ui.url=/swagger-ui.html
+# MongoDB
+mongodb+srv:${MONGO_URI}
+
