add mongodb + like/comment/follow

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,5 +34,5 @@ springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui
 
 # MongoDB
-mongodb+srv:${MONGO_URI}
-
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=blogdb
