add redis + verify email

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ OPENAI_API_KEY=your-openai-api-key
 
 # MongoDB
 MONGO_URI=mongodb+srv://myuser:myStrongPass123@diemyolo.ylr4qyb.mongodb.net/blogdb?retryWrites=true&w=majority
+
+# Mail
+MAIL_USERNAME=your-mail-name
+MAIL_PASSWORD=your-mail-app-password
+
+# Domain
+APP_DOMAIN=your-app-domain
