--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,5 +49,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 app.domain.url=${APP_DOMAIN}
 
 # Redis
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_REDIS_PORT:6379}
