--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,6 @@ app.domain.url=${APP_DOMAIN}
 # Redis
 spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
 spring.data.redis.port=${SPRING_REDIS_PORT:6379}
+
+#CORS
+app.frontend.origin=${APP_FRONTEND_ORIGIN}
