--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,18 +1,4 @@
 services:
-  blog-db:
-    image: postgres:15
-    container_name: blog-db
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 12345
-      POSTGRES_DB: blog_db
-    ports:
-      - "5432:5432"
-    volumes:
-      - pgdata:/var/lib/postgresql/data
-    networks:
-      - blog-network
-
   redis:
     image: redis:7
     container_name: blog-redis
@@ -21,25 +7,11 @@ services:
     networks:
       - blog-network
 
-  pgadmin:
-    image: dpage/pgadmin4
-    container_name: blog-pgadmin
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
-    ports:
-      - "5050:80"
-    depends_on:
-      - blog-db
-    networks:
-      - blog-network
-
   blog-api:
     build:
       context: .
     container_name: blog-api
     depends_on:
-      - blog-db
       - redis
     env_file:
       - .env.prod
@@ -47,7 +19,7 @@ services:
       SPRING_PROFILES_ACTIVE: docker
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
-      SPRING_DATASOURCE_URL: jdbc:postgresql://blog-db:5432/blog_db
+      SPRING_DATASOURCE_URL: ${SPRING_DATASOURCE_URL}
       SPRING_DATASOURCE_USERNAME: ${DB_USERNAME}
       SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
       SPRING_REDIS_HOST: redis
@@ -61,9 +33,6 @@ services:
     networks:
       - blog-network
     entrypoint: ["./wait-for-it.sh", "redis", "6379", "--", "java", "-jar", "blog-api.jar"]
-
-volumes:
-  pgdata:
 
 networks:
   blog-network:
