add file upload and file download

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,11 @@ MAIL_PASSWORD=your-mail-app-password
 
 # Domain
 APP_DOMAIN=your-app-domain
+
+# CORS
+APP_FRONTEND_ORIGIN=your-cors
+
+# AWS S3
+AWS_S3_IAM_ACCESS_KEY=your-access-key
+AWS_S3_IAM_SECRET_ACCESS_KEY=your-secret-access-key
+AWS_S3_BUCKET_NAME=your-bucket-name
