--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
 			<artifactId>spring-boot-starter-data-mongodb</artifactId>
 		</dependency>
 
+		<!-- AWS S3 for file storing -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.25.15</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
