--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,11 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# Multipart file
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 # DevTools Properties
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
@@ -54,3 +59,8 @@ spring.data.redis.port=${SPRING_REDIS_PORT:6379}
 
 #CORS
 app.frontend.origin=${APP_FRONTEND_ORIGIN}
+
+#AWS S3
+aws.s3.iam.access.key=${AWS_S3_IAM_ACCESS_KEY}
+aws.s3.iam.secret.access.key=${AWS_S3_IAM_SECRET_ACCESS_KEY}
+aws.s3.bucket.name=${AWS_S3_BUCKET_NAME}
