fix file upload + add region into application.properties

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,4 @@ APP_FRONTEND_ORIGIN=your-cors
 AWS_S3_IAM_ACCESS_KEY=your-access-key
 AWS_S3_IAM_SECRET_ACCESS_KEY=your-secret-access-key
 AWS_S3_BUCKET_NAME=your-bucket-name
+AWS_S3_REGION=aws-s3-region
