--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.show-sql=true
 
 # Multipart file
 spring.servlet.multipart.enabled=true
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=300MB
+spring.servlet.multipart.max-request-size=350MB
 
 # DevTools Properties
 spring.devtools.restart.enabled=true
@@ -64,3 +64,4 @@ app.frontend.origin=${APP_FRONTEND_ORIGIN}
 aws.s3.iam.access.key=${AWS_S3_IAM_ACCESS_KEY}
 aws.s3.iam.secret.access.key=${AWS_S3_IAM_SECRET_ACCESS_KEY}
 aws.s3.bucket.name=${AWS_S3_BUCKET_NAME}
+aws.s3.region=${AWS_S3_REGION}
