add login with google

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ AWS_S3_IAM_ACCESS_KEY=your-access-key
 AWS_S3_IAM_SECRET_ACCESS_KEY=your-secret-access-key
 AWS_S3_BUCKET_NAME=your-bucket-name
 AWS_S3_REGION=aws-s3-region
+
+# Google OAuth2
+OAUTH2_CLIENT_ID=YOUR_CLIENT_ID
+OAUTH2_CLIENT_SECRET=YOUR_CLIENT_SECRET
