--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -57,11 +57,22 @@ app.domain.url=${APP_DOMAIN}
 spring.data.redis.host=${SPRING_REDIS_HOST:localhost}
 spring.data.redis.port=${SPRING_REDIS_PORT:6379}
 
-#CORS
+# CORS
 app.frontend.origin=${APP_FRONTEND_ORIGIN}
 
-#AWS S3
+# AWS S3
 aws.s3.iam.access.key=${AWS_S3_IAM_ACCESS_KEY}
 aws.s3.iam.secret.access.key=${AWS_S3_IAM_SECRET_ACCESS_KEY}
 aws.s3.bucket.name=${AWS_S3_BUCKET_NAME}
 aws.s3.region=${AWS_S3_REGION}
+
+# Google OAuth2 config
+spring.security.oauth2.client.registration.google.client-id=${OAUTH2_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${OAUTH2_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=email,profile
+
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
