--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,13 @@
 			<version>2.25.15</version>
 		</dependency>
 
+		<!-- Google API Client -->
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
